--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,151 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AirtreksRedesign</title>
+  <title>Airtreks Redesign</title>
+  	
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script
-
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+ 
+  <link rel="stylesheet" href="assets/owl.carousel.css">
+  <link rel="stylesheet" href="assets/owl.theme.css">	
+	
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+	<script src="assets/owl.carousel.js"></script>
+ 	<script src="assets/owl.caro.js"></script>
+
+
 </head>
 <body>
 <div class="main-wrapper">
+
+	<nav class="navbar navbar-default navbar-static-top" role="navigation">
+	  <div class="container-fluid">
+	   
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#"><img class="nav-logo" src="assets/at_logo.png"></a>
+	    </div>
+
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">   
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Airfare <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">Separated link</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">One more separated link</a></li>
+	          </ul>
+	        </li>	
+	               
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ready <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">Separated link</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">One more separated link</a></li>
+	          </ul>
+	        </li>	        
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Set <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">Separated link</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">One more separated link</a></li>
+	          </ul>
+	        </li>	        
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Go <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">Separated link</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">One more separated link</a></li>
+	          </ul>
+	        </li>	    
+	          
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Travel Store <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">Separated link</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">One more separated link</a></li>
+	          </ul>
+	        </li>
+	        
+	        <li><a href="#">Blog</a></li>
+	        <li><a href="#">About AirTreks</a></li>
+	      </ul>
+	     
+	       <form class="navbar-form navbar-right" role="search">
+	        <div class="form-group">
+	          <input type="text" class="form-control" placeholder="Search">
+	        </div>
+	        <button type="submit" class="btn btn-default">Submit</button>
+	      </form>
+	    </div> 
+	  </div> 
+	</nav>
+
+	<div id="owl-demo" class="owl-carousel owl-theme">
+	  <div class="item">
+	  	<div class="image-wrapper">
+	  		<div class="image-content">
+			  	<p>Last week, 10,612 people used TripPlanner to price their Around the World Tickets or Multi Destination Flights.</p>
+			  	<p>Now it’s your turn to get instant pricing for any Round the World trip.</p><br>
+			  	<button type="button" class="btn btn-primary btn-lg first-button">Begin Your Journey Here</button>
+		  	</div>
+	  	</div>
+	  	<img src="assets/sp_lake.jpg" alt="dribbble com/griffinkeller">
+	  </div>
+	  <div class="item">
+	  	<div class="image-wrapper">
+	  		<div class="image-content">
+	  			<p>Hello two</p>
+	  		</div>
+	  	</div>
+	  	<img src="assets/sp_prague.jpg" alt="dribbble com/LumenBigott">	  	
+	  </div>
+	  <div class="item">
+	  	<div class="image-wrapper">
+	  		<div class="image-content">
+		  		<p style="color:#888">Hello three</p>
+		  	</div>
+		  </div>
+	  	<img src="assets/sp_canal.jpg" alt="flickr com/photos/kokorowa/2313467800">
+	  </div>
+	</div>
+
 	<div class="content-box">
 		<div class="logo-box">
 		</div>
-		<input type="button" value="Bootstrap">
 	</div>
 
 
