--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -120,7 +120,7 @@
 	  		<div class="image-content">
 			  	<p>Last week, 10,612 people used TripPlanner to price their Around the World Tickets or Multi Destination Flights.</p>
 			  	<p>Now it’s your turn to get instant pricing for any Round the World trip.</p><br>
-			  	<button type="button" class="btn btn-primary btn-lg first-button">Begin Your Journey Here</button>
+			  	<button type="button" class="btn btn-primary btn-lg">Begin Your Journey Here</button>
 		  	</div>
 	  	</div>
 	  	<img src="assets/sp_lake.jpg" alt="dribbble com/griffinkeller">
@@ -128,7 +128,8 @@
 	  <div class="item">
 	  	<div class="image-wrapper">
 	  		<div class="image-content">
-	  			<p>Hello two</p>
+	  			<p>Find out why AirTreks is the best Around the World ticket provider anywhere.</p><br>
+	  			<button type="button" class="btn btn-primary btn-lg">Testimonials</button>
 	  		</div>
 	  	</div>
 	  	<img src="assets/sp_prague.jpg" alt="dribbble com/LumenBigott">	  	
@@ -136,7 +137,8 @@
 	  <div class="item">
 	  	<div class="image-wrapper">
 	  		<div class="image-content">
-		  		<p style="color:#888">Hello three</p>
+		  		<p style="color:#888">Learn how to travel around the world.</p><br>
+			  	<button type="button" class="btn btn-primary btn-lg">Check out RTW 101</button>
 		  	</div>
 		  </div>
 	  	<img src="assets/sp_canal.jpg" alt="flickr com/photos/kokorowa/2313467800">
@@ -148,6 +150,78 @@
 		</div>
 	</div>
 
+	<!-- Specials -->
+	<div class="specials_thumbs_container">
+
+		<div class="row">
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="assets/spc_amazing_adventure.png" alt="...">
+		      <div class="caption">
+		        <h3>Amazing Adventure Special</h3>
+		        <p>Los Angeles - London - Nairobi - Kilimanjaro - Zanzibar - Dar Es Salaam - Johannesburg - surface - Cape Town - Dubai - Singapore - surface - Kuala Lumpur - Chiang Mai - surface - Bangkok - Phuket - Singapore - Brisbane - surface - Sydney - Nadi (Fiji) - Los Angeles</p>
+		        <p><a href="#" class="btn btn-primary" role="button">Get more info</a></p>
+		      </div>
+		    </div>
+		  </div>
+		
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="assets/spc_the_nomad.png" alt="...">
+		      <div class="caption">
+		        <h3>The Nomad</h3>
+		        <p>Los Angeles - Tokyo - Singapore - Kathmandu - surface - Delhi - Istanbul - London - surface - Paris - Los Angeles</p>
+		        <p><a href="#" class="btn btn-primary" role="button">Get more info</a></p>
+		      </div>
+		    </div>
+		  </div>
+		
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="assets/spc_cpac.png" alt="...">
+		      <div class="caption">
+		        <h3>Circle Pacific</h3>
+		        <p>Los Angeles - Honolulu - Manila - Bangkok - surface - Singapore - Sydney - surface - Melbourne - Christchurch - surface - Auckland - Rarotonga (Cook Islands) - Los Angeles</p>
+		        <p><a href="#" class="btn btn-primary" role="button">Get more info</a></p>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	</div>
+
+	<div class="footer">
+		<div class="footer-row-container">
+			<div class="row">
+			  <div class="col-md-4">
+			  	<ul class="list-unstyled list-group">
+			  		<li class="text-left">Contact AirTreks</li>
+			  		<li class="text-left">About AirTreks</li>
+			  		<li class="text-left">Your Privacy</li>
+			  		<li class="text-left">Partner with AirTreks</li>
+			  		<li class="text-left">FAQs</li>
+			  		<li class="text-left">Customer Service</li>
+			  		<li class="text-left">Sitemap</li>
+			  	</ul>
+			  </div>
+			  <div class="col-md-4">
+					<ul class="list-unstyled list-group">
+			  		<li class="text-left">Ready</li>
+			  		<li class="text-left">Set</li>
+			  		<li class="text-left">Go</li>
+			  		<li class="text-left">Travel Store</li>
+			  		<li class="text-left">Blog</li>
+			  		<li class="text-left">Testimonials</li>
+			  	</ul>
+			  </div>
+			  <div class="col-md-4">
+			  	<ul class="list-unstyled list-group">
+			  		<li class="text-left">Facebook</li>
+			  		<li class="text-left">Twitter</li>
+			  	</ul>
+			  </div>
+			</div>
+		</div>
+	</div>
 
 </div>
 
