--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 <body>
 <div class="main-wrapper">
 
+	<!-- //// NAV BAR ///// -->
 	<nav class="navbar navbar-default navbar-static-top" role="navigation">
 	  <div class="container-fluid">
 	   
@@ -114,7 +115,10 @@
 	  </div> 
 	</nav>
 
-	<div id="owl-demo" class="owl-carousel owl-theme">
+
+	<!-- ///////// CAROUSEL ////////// -->
+
+	<div id="owl-demo" class="owl-carousel owl-theme cursor">
 	  <div class="item">
 	  	<div class="image-wrapper">
 	  		<div class="image-content">
@@ -123,7 +127,7 @@
 			  	<button type="button" class="btn btn-primary btn-lg">Begin Your Journey Here</button>
 		  	</div>
 	  	</div>
-	  	<img src="assets/sp_lake.jpg" alt="dribbble com/griffinkeller">
+	  	<img src="assets/sp_lake1.jpg" alt="dribbble com/griffinkeller">
 	  </div>
 	  <div class="item">
 	  	<div class="image-wrapper">
@@ -132,7 +136,7 @@
 	  			<button type="button" class="btn btn-primary btn-lg">Testimonials</button>
 	  		</div>
 	  	</div>
-	  	<img src="assets/sp_prague.jpg" alt="dribbble com/LumenBigott">	  	
+	  	<img src="assets/sp_prague1.jpg" alt="dribbble com/LumenBigott">	  	
 	  </div>
 	  <div class="item">
 	  	<div class="image-wrapper">
@@ -141,21 +145,23 @@
 			  	<button type="button" class="btn btn-primary btn-lg">Check out RTW 101</button>
 		  	</div>
 		  </div>
-	  	<img src="assets/sp_canal.jpg" alt="flickr com/photos/kokorowa/2313467800">
+	  	<img src="assets/sp_canal1.jpg" alt="flickr com/photos/kokorowa/2313467800">
 	  </div>
 	</div>
+
+	<!-- //////// CONTENT BOX ///////// -->
 
 	<div class="content-box">
 		<div class="logo-box">
 		</div>
 	</div>
 
-	<!-- Specials -->
+	<!-- //////// SPECIALS //////// -->
 	<div class="specials_thumbs_container">
 
 		<div class="row">
 		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
+		    <div class="thumbnail grow">
 		      <img src="assets/spc_amazing_adventure.png" alt="...">
 		      <div class="caption">
 		        <h3>Amazing Adventure Special</h3>
@@ -166,7 +172,7 @@
 		  </div>
 		
 		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
+		    <div class="thumbnail grow">
 		      <img src="assets/spc_the_nomad.png" alt="...">
 		      <div class="caption">
 		        <h3>The Nomad</h3>
@@ -177,7 +183,7 @@
 		  </div>
 		
 		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
+		    <div class="thumbnail grow">
 		      <img src="assets/spc_cpac.png" alt="...">
 		      <div class="caption">
 		        <h3>Circle Pacific</h3>
@@ -189,36 +195,40 @@
 		</div>
 	</div>
 
+
+	<!-- ///////// FOOTER ////////// -->
+
 	<div class="footer">
 		<div class="footer-row-container">
 			<div class="row">
 			  <div class="col-md-4">
 			  	<ul class="list-unstyled list-group">
-			  		<li class="text-left">Contact AirTreks</li>
-			  		<li class="text-left">About AirTreks</li>
-			  		<li class="text-left">Your Privacy</li>
-			  		<li class="text-left">Partner with AirTreks</li>
-			  		<li class="text-left">FAQs</li>
-			  		<li class="text-left">Customer Service</li>
-			  		<li class="text-left">Sitemap</li>
+			  		<li class="text-left"><a href="#">Contact AirTreks</a></li>
+			  		<li class="text-left"><a href="#">About AirTreks</a></li>
+			  		<li class="text-left"><a href="#">Your Privacy</a></li>
+			  		<li class="text-left"><a href="#">Partner with AirTreks</a></li>
+			  		<li class="text-left"><a href="#">FAQs</a></li>
+			  		<li class="text-left"><a href="#">Customer Service</a></li>
+			  		<li class="text-left"><a href="#">Sitemap</a></li>
 			  	</ul>
 			  </div>
 			  <div class="col-md-4">
 					<ul class="list-unstyled list-group">
-			  		<li class="text-left">Ready</li>
-			  		<li class="text-left">Set</li>
-			  		<li class="text-left">Go</li>
-			  		<li class="text-left">Travel Store</li>
-			  		<li class="text-left">Blog</li>
-			  		<li class="text-left">Testimonials</li>
+			  		<li class="text-left"><a href="#">Ready</a></li>
+			  		<li class="text-left"><a href="#">Set</a></li>
+			  		<li class="text-left"><a href="#">Go</a></li>
+			  		<li class="text-left"><a href="#">Travel Store</a></li>
+			  		<li class="text-left"><a href="#">Blog</a></li>
+			  		<li class="text-left"><a href="#">Testimonials</a></li>
 			  	</ul>
 			  </div>
 			  <div class="col-md-4">
 			  	<ul class="list-unstyled list-group">
-			  		<li class="text-left">Facebook</li>
-			  		<li class="text-left">Twitter</li>
+			  		<li class="text-left"><a href="#">Facebook</a></li>
+			  		<li class="text-left"><a href="#">Twitter</a></li>
 			  	</ul>
 			  </div>
+			  <img class="footer-logo" src="assets/at_logo.png">
 			</div>
 		</div>
 	</div>
