--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@ nav.navbar.navbar-default.navbar-static-top {
 
 .main-wrapper {
 	background-color: #8FC2E9;
-	height: 120vh;
+	height: 300vh;
 	text-align: center;
 }
 
@@ -31,6 +31,10 @@ nav.navbar.navbar-default.navbar-static-top {
     display: block;
     width: 100%;
     height: auto;
+}
+
+.cursor {
+	cursor: default;
 }
 
 .image-wrapper {
@@ -97,6 +101,31 @@ img.nav-logo {
 	margin: 10px;
 }
 
+.specials_thumbs_container {
+	width: 100%;
+	padding: 0 30px 0 30px;
+}
+
+.thumbnail .caption {
+	height: 240px;
+}
+
+.grow {
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: transform;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.grow:hover {
+  -webkit-transform: scale(1.03);
+  -ms-transform: scale(1.03);
+  transform: scale(1.03);
+}
+
+
 .footer {
 	margin: 0;
 	background-color: #2E2E2E;
@@ -114,6 +143,11 @@ img.nav-logo {
 
 .footer li {
 	padding: 8px;
+}
+
+.footer-logo {
+	margin: 10px 0px 0px -75px;
+	position: absolute;
 }
 
 
