added basic content sections

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,7 +124,8 @@
 	  		<div class="image-content">
 			  	<p>Last week, 10,612 people used TripPlanner to price their Around the World Tickets or Multi Destination Flights.</p>
 			  	<p>Now it’s your turn to get instant pricing for any Round the World trip.</p><br>
-			  	<button type="button" class="btn btn-primary btn-lg">Begin Your Journey Here</button>
+			  	<button type="button" class="btn btn-primary btn-lg">Begin Your Journey Here</button><br>
+			  	<p><a href="#">Free travel insurance included on every qualified trip!</a></p>
 		  	</div>
 	  	</div>
 	  	<img src="assets/sp_lake1.jpg" alt="dribbble com/griffinkeller">
@@ -152,7 +153,75 @@
 	<!-- //////// CONTENT BOX ///////// -->
 
 	<div class="content-box">
-		<div class="logo-box">
+		<!-- <div class="logo-box">
+		</div> -->
+		<div class="rtw101">
+			<div class="rtw101-content">
+				<div class="ready-div view-options">Ready</div>
+				<div class="set-div view-options">Set</div>
+				<div class="go-div view-options">Go</div>
+			</div>
+			<div class="rtw101-nav">
+				<ul>
+					How to Travel the World on a RTW Ticket
+					<li class="ready view-options">
+						Ready
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+					<li class="set view-options">
+						Set
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>					
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+
+					<li>
+						
+					</li>
+					<li class="go view-options">
+						Go
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+					<li>
+						
+					</li>
+
+				</ul>
+			</div>
 		</div>
 	</div>
 
@@ -192,6 +261,9 @@
 		      </div>
 		    </div>
 		  </div>
+		</div>
+		<div class="all-specials-msg">
+			<p class="grow"><a href="#">See all the specials!</a></p>
 		</div>
 	</div>
 
