--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,13 @@
  *= require_tree .
  */
 
-html, body {
+html, body, li {
 	margin: 0;
+	list-style: none; 
+}
+
+body a:hover {
+	text-decoration: none;
 }
 
 nav.navbar.navbar-default.navbar-static-top {
@@ -23,9 +28,12 @@ nav.navbar.navbar-default.navbar-static-top {
 
 .main-wrapper {
 	background-color: #8FC2E9;
-	height: 300vh;
+	height: 310vh;
 	text-align: center;
 }
+
+
+/* ////// CAROUSEL /////// */
 
 #owl-demo .item img{
     display: block;
@@ -80,27 +88,88 @@ nav.navbar.navbar-default.navbar-static-top {
 }
 
 
+/* /////// CONTENT //////// */
+
 .content-box {
 	border: 10px solid #E5E5E5;
 	background-color: #fff;
-	height: 90vh;
-	width: 75%;
+	height: 100vh;
+	width: 95%;
 	display: block;
 	margin: 19px auto;
 }
 
-img.nav-logo {
+/*img.nav-logo {
 	width: 140px;
 	margin: -8px 0 0 -8px;
-}
+}*/
 
-.logo-box {
+/*.logo-box {
 	background: url(../assets/at_logo.png) no-repeat;
 	height: 100%;
 	width: 100%;
 	margin: 10px;
+}*/
+
+.rtw101-nav li {
+	cursor: pointer;
 }
 
+.ready-div, .set-div, .go-div {
+	display: none;
+	height: 100%;
+	width: 100%;
+	padding: 1%;
+	border: 5px solid #000;
+	color: #E5E5E5;
+}
+
+.ready-div {
+	background-color: darkred;
+}
+
+.set-div {
+	background-color: darkblue;
+} 
+.go-div {
+	background-color: darkorange;
+}
+
+.ready-div.current, .set-div.current, .go-div.current {
+	display: block;
+}
+
+.ready.current, .set.current, .go.current {
+	color: orange;
+	font-size: 20px;
+}
+
+
+
+.rtw101 {
+	width: 100%;
+	height: 100%;
+}
+
+.rtw101-content, .rtw101-nav {
+	box-sizing: border-box;
+	height: 100%;
+	float: left;
+	padding: 30px;
+}
+
+.rtw101-content {
+	width: 70%;
+	background-color: lightgreen;
+}
+
+.rtw101-nav {
+	width: 30%;
+	background-color: lightyellow;
+	border-left: 2px solid #E5E5E5;
+}
+
+   /* ///// SPECIALS //// */
 .specials_thumbs_container {
 	width: 100%;
 	padding: 0 30px 0 30px;
@@ -111,7 +180,7 @@ img.nav-logo {
 }
 
 .grow {
-  display: inline-block;
+  /*display: inline-block;*/
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: -webkit-transform;
@@ -125,7 +194,17 @@ img.nav-logo {
   transform: scale(1.03);
 }
 
+.all-specials-msg {
+	clear: both;
+	text-align: center;
+	font-size: 25px;
+	letter-spacing: 12px;
+	background-color: #fff;
+	border: 6px solid #E5E5E5;
+	margin-bottom: 10px;
+}
 
+	/*//////// FOOTER ////////*/
 .footer {
 	margin: 0;
 	background-color: #2E2E2E;
