--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@ html, body, li {
 	list-style: none; 
 }
 
-body a:hover {
+body a:hover, .ease:hover {
 	text-decoration: none;
 	transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
@@ -112,21 +112,32 @@ nav.navbar.navbar-default.navbar-static-top {
 	/*box-sizing: border-box;*/
 	height: 100%;
 	float: left;
-	padding: 30px;
 }
 
 .rtw101-content {
 	width: 70%;
-	border-right: 2px solid #E5E5E5;
+	border-right: 2px solid #FFF;
 	background-color: lightgreen;
+}
+
+.content-default {
+	display: block;
+	width: 100%;
+	height: 100%;
+	font-family: 'Stalinist One', cursive;
+	font-size: 80px;
+	padding-top: 100px;
+	text-align: center;
+	/*background-color: canary;*/
+	/*font-family: 'Diplomata SC', cursive;*/
 }
 
 .ready-div, .set-div, .go-div {  
 	display: none;
 	height: 100%;
 	width: 100%;
-	padding: 1%;
-	border: 5px solid #000;
+	/*padding: 1%;*/
+	/*border: 5px solid #000;*/
 	color: #E5E5E5;
 }
 
@@ -144,6 +155,7 @@ nav.navbar.navbar-default.navbar-static-top {
 	display: block;
 }
 
+		/* ///// CONTENT NAV ////// */
 .rtw101-nav {
 	width: 30%;
 	padding-top: 10px;
@@ -152,7 +164,7 @@ nav.navbar.navbar-default.navbar-static-top {
 	overflow: scroll;
 }
 
-.nav-headers {
+.ready, .set, .go {
 	cursor: pointer;
 }
 
@@ -181,6 +193,7 @@ nav.navbar.navbar-default.navbar-static-top {
 .hiddenitems {
 	width: 100%;
 	overflow: hidden;
+	/*margin-left: -1px;*/
 }
 
 
@@ -192,7 +205,17 @@ nav.navbar.navbar-default.navbar-static-top {
 }
 
 .thumbnail .caption {
-	height: 240px;
+	height: auto;
+}
+
+.sp-thumb-price {
+	font-size: 19px;
+	color: darkred;
+}
+
+.sp-thumb-subprice {
+	font-size: 12px;
+	color: darkblue;
 }
 
 .grow {
@@ -220,11 +243,21 @@ nav.navbar.navbar-default.navbar-static-top {
 	margin-bottom: 10px;
 }
 
+.all-specials-msg:hover {
+	background-color: #555;
+	color: #fff !important;
+}
+
+.all-specials-msg:hover a {
+	color: white;
+}
+
 	/*//////// FOOTER ////////*/
 .footer {
 	margin: 0;
 	background-color: #2E2E2E;
-	height: 300px;
+	background: url(../assets/noise.png);
+	height: auto;
 	width: 100%;
 	color: #fff;
 }
@@ -237,7 +270,20 @@ nav.navbar.navbar-default.navbar-static-top {
 }
 
 .footer li {
-	padding: 8px;
+	padding: 4px 10px;
+	margin: 5px -6%;
+	background-color: #000;
+	border: 2px solid #888;
+}
+
+.footer li:hover {
+	background-color: #888;
+	border: 2px solid #666;
+	text-transform: uppercase;
+}
+
+.footer li:hover a {
+	color: white !important;
 }
 
 .footer-logo {
