--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,7 @@ body a:hover, .ease:hover {
   -ms-transition: all 0.2s ease-in-out;  
 }
 
+
 nav.navbar.navbar-default.navbar-static-top {
 	margin-bottom: 0px;
 }
@@ -37,12 +38,17 @@ nav.navbar.navbar-default.navbar-static-top {
 	text-align: center;
 }
 
+img.nav-logo {
+	margin-top: -15px;
+	width: 190px;
+}
 /* ////// CAROUSEL /////// */
 
 #owl-demo .item img{
     display: block;
     width: 100%;
     height: auto;
+    margin-top:auto;
 }
 
 .cursor {
@@ -57,10 +63,11 @@ nav.navbar.navbar-default.navbar-static-top {
 }
 
 .image-content {
+	display: none;
 	width: 75%;
 	color: #fff;
 	text-align: center;
-	display: block;
+	/*display: block;*/
 	margin: 60px auto;
 }
 
@@ -77,18 +84,17 @@ nav.navbar.navbar-default.navbar-static-top {
 
 .btn-lg {
 	border-radius: 0px !important;
-	/*background-color: #e67e22 !important;*/
-	/*border: 0 !important;*/
 	font-size: 30px !important;
+	color: #fff !important;
 }
 
-.glyphicon-chevron-left {
+.left-arrow {
 	font-size: 25px;
-	padding: 6px 6px 6px 0;
+	padding: 6px 0px 6px 0;
 }
-.glyphicon-chevron-right {
+.right-arrow {
 	font-size: 25px;
-	padding: 6px 0 6px 6px;
+	padding: 6px 0 6px 0px;
 }
 
 
@@ -117,32 +123,47 @@ nav.navbar.navbar-default.navbar-static-top {
 .rtw101-content {
 	width: 70%;
 	border-right: 2px solid #FFF;
-	background-color: lightgreen;
+	overflow: scroll;
 }
 
 .content-default {
+	background: url(../assets/city.jpg) no-repeat center;
+		-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 	display: block;
 	width: 100%;
 	height: 100%;
-	font-family: 'Stalinist One', cursive;
-	font-size: 80px;
-	padding-top: 100px;
+	padding-top: 125px;
 	text-align: center;
-	/*background-color: canary;*/
-	/*font-family: 'Diplomata SC', cursive;*/
+}
+
+.rtw101-splash { 
+	position: relative; /*for the animate down feature*/
+	background-color: #000;
+	opacity: 0.8;
+	color: #ccc;
+	margin-left: -2px;
+	width: 100%;
+	font-family: 'Ewert', cursive;
+	font-size: 80px;
+	-webkit-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
+	-moz-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
+	-o-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
+	-ms-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
+	transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
 }
 
 .ready-div, .set-div, .go-div {  
 	display: none;
 	height: 100%;
 	width: 100%;
-	/*padding: 1%;*/
-	/*border: 5px solid #000;*/
 	color: #E5E5E5;
 }
 
 .ready-div {
-	background-color: darkred;
+	background: url(https://farm4.staticflickr.com/3118/2916379491_8ac3efe4d1_o.jpg) no-repeat center;
 }
 .set-div {
 	background-color: darkblue;
@@ -159,8 +180,6 @@ nav.navbar.navbar-default.navbar-static-top {
 .rtw101-nav {
 	width: 30%;
 	padding-top: 10px;
-	background-color: lightyellow;
-	border: 0;
 	overflow: scroll;
 }
 
@@ -201,7 +220,7 @@ nav.navbar.navbar-default.navbar-static-top {
    /* ///// SPECIALS //// */
 .specials_thumbs_container {
 	width: 100%;
-	padding: 0 30px 0 30px;
+	padding: 0 30px 5px 30px;
 }
 
 .thumbnail .caption {
@@ -245,11 +264,36 @@ nav.navbar.navbar-default.navbar-static-top {
 
 .all-specials-msg:hover {
 	background-color: #555;
-	color: #fff !important;
+	color: #fff;
+
 }
 
-.all-specials-msg:hover a {
-	color: white;
+/*.all-specials-msg:hover a {
+	background-color: #555 !important;
+	color: #fff !important;
+}
+*/
+
+#owl-2 .item {
+    background: #42bdc2;
+    margin: 3%;
+    color: #FFF;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    text-align: center;
+}
+
+#owl-2 {
+	margin-bottom: -50px
+}
+
+.sp-item {
+	padding: 10px 5%;
+}
+
+.owl-pagination {
+	display: none;
 }
 
 	/*//////// FOOTER ////////*/
@@ -272,13 +316,10 @@ nav.navbar.navbar-default.navbar-static-top {
 .footer li {
 	padding: 4px 10px;
 	margin: 5px -6%;
-	background-color: #000;
-	border: 2px solid #888;
 }
 
 .footer li:hover {
 	background-color: #888;
-	border: 2px solid #666;
 	text-transform: uppercase;
 }
 
@@ -287,7 +328,7 @@ nav.navbar.navbar-default.navbar-static-top {
 }
 
 .footer-logo {
-	margin: 10px 0px 0px -75px;
+	/*margin: 260px 0px 0px -75px;*/
 	position: absolute;
 }
 
