--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
 html, body, li {
 	margin: 0;
 	list-style: none; 
+	font-family: 'Titillium Web', sans-serif;
 }
 
 body a:hover, .ease:hover {
@@ -34,8 +35,9 @@ nav.navbar.navbar-default.navbar-static-top {
 
 .main-wrapper {
 	background-color: #8FC2E9;
-	height: 310vh;
+	height: 337vh;
 	text-align: center;
+	font-family: 'Titillium Web', sans-serif;
 }
 
 img.nav-logo {
@@ -83,9 +85,24 @@ img.nav-logo {
 } 
 
 .btn-lg {
+	font-family: 'Source Sans Pro', sans-serif !important;
 	border-radius: 0px !important;
-	font-size: 30px !important;
-	color: #fff !important;
+	font-size: 25px !important;
+}
+
+.begin-button {
+	font-family: 'Source Sans Pro', sans-serif !important;
+	border-radius: 0px !important;
+	font-size: 25px !important;
+}
+
+.why-airtreks {
+	background-color: #000;
+	opacity: 0.7;
+	text-align: left;
+	padding: 20px;
+	margin: 10px; 
+	font-size: 18px;
 }
 
 .left-arrow {
@@ -98,7 +115,45 @@ img.nav-logo {
 }
 
 
-/* /////// CONTENT //////// */
+/*////// PHONE & BIZ SECTION /////// */
+
+.phone-and-biz {
+	margin: 0 auto 20px;
+	width: 100%;
+	min-height: 185px;
+	clear: both;
+	background-color: #ccc;
+	font-size: 18px;
+}
+
+.row {
+	margin: -13px 0 0 0 !important;
+}
+
+.phone, .biz {
+	height: auto;
+	text-align: left;
+	padding: 15px 30px 10px 30px !important;
+}
+
+.call-to-action {
+	text-align: center;
+	font-size: 20px;
+	padding: 5px;
+	background-color: #fff;
+	border: 3px solid #E5E5E5;
+	width: 40%;
+	bottom: 10px;
+}
+
+.call-to-action:hover {
+	background-color: #555;
+	border-color: #555;
+	color: #fff;
+}
+
+
+/* /////// RTW 101 CONTENT //////// */
 
 .content-box {
 	border: 10px solid #E5E5E5;
@@ -107,6 +162,7 @@ img.nav-logo {
 	width: 95%;
 	display: block;
 	margin: 19px auto;
+	clear: both;
 }
 
 .rtw101 {
@@ -135,7 +191,7 @@ img.nav-logo {
 	display: block;
 	width: 100%;
 	height: 100%;
-	padding-top: 125px;
+	padding-top: 225px;
 	text-align: center;
 }
 
@@ -253,19 +309,21 @@ img.nav-logo {
 }
 
 .all-specials-msg {
-	clear: both;
 	text-align: center;
 	font-size: 25px;
+	padding: 10px 0;
 	letter-spacing: 12px;
 	background-color: #fff;
 	border: 6px solid #E5E5E5;
 	margin-bottom: 10px;
+	position: relative;
+	z-index: 100; /*because the specials div above was overlapping*/
 }
 
 .all-specials-msg:hover {
 	background-color: #555;
+	border-color: #555;
 	color: #fff;
-
 }
 
 /*.all-specials-msg:hover a {
@@ -318,7 +376,7 @@ img.nav-logo {
 	margin: 5px -6%;
 }
 
-.footer li:hover {
+.footer-item:hover {
 	background-color: #888;
 	text-transform: uppercase;
 }
