--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,88 @@
 <div class="articles-container">
-	all the articles
+  
+	<div class="masonry js-masonry"  data-masonry-options='{ "isFitWidth": true }'>
+	
+	  <div class="item ease">
+	   		<div class="img-box">
+	   			<img src="/assets/airplanes.jpg">
+	   		</div>
+	   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+		
+		<div class="item ease">
+			<div class="img-box">
+	   		<img src="/assets/airplanes.jpg">
+	 		</div>
+  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+
+		<div class="item ease">
+			<div class="img-box">
+	   		<img src="/assets/airplanes.jpg">
+	 		</div>
+  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+
+		<div class="item ease">
+			<div class="img-box">
+	   		<img src="/assets/airplanes.jpg">
+	 		</div>
+  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+
+		<div class="item ease">
+			<div class="img-box">
+	   		<img src="/assets/airplanes.jpg">
+	 		</div>
+  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+
+		<div class="item ease">
+			<div class="img-box">
+	   		<img src="/assets/airplanes.jpg">
+	 		</div>
+  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+
+		<div class="item ease">
+			<div class="img-box">
+	   		<img src="/assets/airplanes.jpg">
+	 		</div>
+  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+
+		<div class="item ease">
+			<div class="img-box">
+	   		<img src="/assets/airplanes.jpg">
+	 		</div>
+  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+	  </div>
+
+		
+		<div class="item ease">
+	   		three point one
+	  </div>
+		
+		<div class="item ease">
+	   		four
+	  </div>
+
+		<div class="item ease">
+			<div class="img-div">
+	   		five
+	   	</div>
+	  </div>
+		
+		<div class="item ease">
+	   		five
+	  </div>
+		
+		<div class="item ease">
+	   		five
+	  </div>
+
+<!-- 	  <div class="item w2">two</div>
+	  <div class="item 3-div">three</div>
+ -->
+	</div>
 </div>
